la cague perdon, hice  los cambios en la main

--- a/sandarinmuebles/src/components/AboutUs.css
+++ b/sandarinmuebles/src/components/AboutUs.css
@@ -1,7 +1,7 @@
 /* AboutUs.css */
 
 .about-us-container {
-    background-color: #f5f5f5;
+    background-color: #fff;
     color: #333;
     padding: 60px;
     border-radius: 8px;
@@ -61,16 +61,17 @@
   }
   
   .about-us-image-collage {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-gap: 16px;
   }
   
   .about-us-image {
     width: 100%;
     max-width: 100%;
-    margin-bottom: 20px;
+    height: auto;
+    margin-bottom: 16px; /* Ajusta el espacio entre las imágenes verticalmente */
   }
-  
  
   .small-image {
     max-width: 100%;
@@ -86,5 +87,36 @@
     width: 100px; /* Establece el ancho deseado */
     height: 100px; /* Establece la misma altura que el ancho para hacerlo cuadrado */
   }
+
   
+
+
+  .small-hr {
+    height: 3px;
+    width: 20px;
+    background-color: #1890ff;
+    display: inline-block;
+    margin-right: 8px;
+    vertical-align: middle;
+  }
+  
+  .experience-statistic {
+    display: flex;
+    align-items: center;
+    margin-bottom: 24px;
+  }
+  
+  .experience-statistic .experience-info {
+    margin-left: 16px;
+  }
+  
+  .experience-statistic p {
+    margin: 0;
+  }
+  
+  .small-hr-title {
+    height: 3px;
+    width: 50px;
+    background-color: #1890ff;
+  }
   
